--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-     background-color: #f2f2f2;
+     background-color: #f7efef;
      color: green;
 }
 
@@ -13,6 +13,13 @@ h1{
      border-radius: 20px;
      height: 250px;
      width: 400px;
+     box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.5);
+     transition: 0.3s;
+}
+
+.image:hover{
+     box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.5);
+     transform: scale(1.4);
 }
 
 p{
